--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "fast-glob": "^3.3.3",
     "feed": "^5.1.0",
+    "framer-motion": "^12.23.25",
     "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
